# panda-work

./: .gitignore  README.md  files_deleted_by_mistake
BremCorr/: README_CASES  batch.sh  match.C  patch_against_jan14_release.patch  patch_against_trunk_rev23877_feb.21.2014.patch  pid_complete.C
BremCorr/timing_case1/: batch.sh  digi_complete.C
BremCorr/timing_case2/: batch.sh  pid_complete.C
BremCorr/timing_case3/: batch.sh  sim_complete.C
PhysListHadrG4/.bkp/2014.02.11/: CMakeLists.txt  HistFillerTask.cxx
PhysListHadrG4/ana/: reco_analys.C  reco_analys_mod.C  reco_analys_org.C
PhysListHadrG4/figs/: 2013.11.08.aux  2013.11.08.nav  2013.11.08.tex  table.org  table.tex
PhysListHadrG4/gconfig/: g3Config.C  g3Config_new.C  hadr_phys_lists_g3.txt
PhysListHadrG4/logs/: move.sh
PhysListHadrG4/macros/: _hist_filler.C  draw_acc.C  emc_complete.C  eventDisplay.C  geotrack.C  hist_filler.C  plot.C  plot_3vs4.C  plot_4EmvOpt.C  plot_4HPvsN.C  plot_fvse.C  plot_g3_3vsD.C  plot_pvsm.C  reco_analys.C
PhysListHadrG4/output/: move.sh  rename.sh
PhysListHadrG4/phys_list_deets/: FTFP_BERT.hadr.txt  FTFP_BERT.txt  FTFP_BERT_TRV_EMV.txt  FTF_BIC.hadr.txt  FTF_BIC.txt  LHEP.em.txt  LHEP.hadr.txt  LHEP.txt  QGSC_BERT_EMV.hadr.txt  QGSC_BERT_EMV.txt  QGSP_BERT_EMV.hadr.txt  QGSP_BERT_EMV_OPTICAL.txt  QGSP_BERT_HP.hadr.txt  QGSP_BERT_HP.txt  QGSP_BERT_OPTICAL.txt  QGSP_BIC_EMV.em.txt  QGSP_BIC_EMV.hadr.txt  QGSP_BIC_EMV.txt  QGSP_FTFP_BERT_EMV.txt  QGSP_INCLEXX.txt  QGS_BIC.hadr.txt  QGS_BIC.txt
PhysListHadrG4/scripts/: clear.sh  config.sh  histify.sh  histify0.sh  histify1.sh  histify2.sh  histify3.sh  histify_all_1gev.sh  histify_micap_gcalor_fluka.sh  scan.sh  scan_pip_g3_hadr3_nucrin.sh  scan_pip_qgsp_bic_emv.sh  scan_second_batch_crashed.sh
PhysListHadrG4/test/: CMakeLists.txt  DrawField.C  Tools.C  anaPatternRecoQuality.C  ana_complete.C  ana_fast_psi2s.C  check_complete.C  digi_complete.C  drawGeo.C  eventDisplay.C  pid_complete.C  rad_complete.C  reco_complete.C  recoideal_complete.C  run_fast.C  sim_complete.C  sim_complete_vis.C
binsong_thesis/: mu_pt.C  pro_pt.C  pro_pt_fw.C
grp_meet/2014.10.13/: Ermias.Reu.Grp.2014.10.13.tex
grp_meet/2014.10.22/: Ermias.Reu.Grp.2014.10.22.tex  eff.txt
grp_meet/2014.11.06/: Ermias.Reu.Grp.2014.11.06.tex
hades/pionbeam/: .gitignore  HBeam.h  beam_init_ms.C  makefile  pibeam_set6_mod_bug_at_det1.data  pibeam_set6_mod_new.data  pibeam_set6_mod_new_new.data  pion_generator.C.org  pion_generator.cpp  pion_generator.cpp.bkp.jun.10  plot_pres.C  root_finder.C  seg_size.C  sim_all.sh  tmp.C  tmp2.C  tmp3.C
jpsi_pi0/: .gitignore  _figs.C  all.C  anav2all.sh  bg.sh  bins.C  booking  eff.C  evt_gen_priv_modif  figs  figs.C  fill.C  fill.cpp  filler.h  jpsi.C  makefile  rename.sh  wtf_moment_filler.h
jpsi_pi0/caveats/: Brem_corr_ele.C  ana_jpsi.C  anav2.C  anav2all.sh  brem.C  brem_full.C  bremall.sh  bremall_esim.sh  bremall_mum.sh  bug.C  corr.C  dphimax.C  draw.C  draw2.C  draw_eloss.C  draw_mat.C  draw_pad1.C  draw_pad2.C  draw_pad3.C  draw_pad4.C  draw_pad5.C  draw_pad6.C  draw_pad7.C  eff  jpsi.C  mult.C  nbrem.C  pad_setup.C  phibump.C  raddep.C  res.C  t.C  t.h  tail.C  test.sh  theta.C  thres.C  wtd.C
jpsi_pi0/dpm_evt_gen/: generate.py  setup_screen.sh
jpsi_pi0/eff/: anatup.C  comp.C  dist.C  eff2.C  eff2_locBkp.C  eff2d.C  eff_pi0.C  effall.sh  effhists.C  effhists2.C  effic.C  epem_inst.txt  figs  fourrier.C  hadd.sh  hadd_list.sh  pion_misid_param.ipynb  res.C  smooth_eff.C  tfer.sh
jpsi_pi0/figs/: 2014.10.13  2014.11.06  2015.06.08  2015.09.15  _2014.12.09  _pcm_2015.06.08.C  ananote.C  ang_dist.C  bg_inv_mass.C  bg_sig_comp_angles.C  bg_xsect_data.txt  cuts.C  eff.C  gdr_2014.12.16.C  gen_dist.C  grp_meet_2014.10.02.C  grp_meet_2014.10.13.C  grp_meet_2014.10.22.C  grp_meet_2014.11.06.C  mom_dist.org.C  mom_vs_the_epi.C  pcm_2014.12.09.C  pcm_2015.06.08.C  pi0_e_vs_gg_oa.C  t.C
jpsi_pi0/grp_meet/: Ermias.Reu.Grp.2014.10.02.aux  Ermias.Reu.Grp.2014.10.02.nav  Ermias.Reu.Grp.2014.10.02.tex
jpsi_pi0/hists/: mom_dist.C  t.C
jpsi_pi0/ipnb/: interactive.ipynb  tda.C  tda.ipynb  tda.py
jpsi_pi0/macros/: ana.C  ana.C.bkp.local  ana.C.bkp.origin  anav2.C  comp.C  count_events.C  dpm_filter.C  dpm_reader.C  evtgen.py  fill.C  fill.cpp  fit_jpsi_pi0.C  full_sim.py  gen_sig.C  gen_sig.C.desktop  gen_sig.C.laptop  generate.py  jpsi_pi0.dec  jpsi_pi0_12.0.dec  jpsi_pi0_12.35.dec  jpsi_pi0_16.97.dec  jpsi_pi0_24.43.dec  jpsi_pi0_5.5.dec  jpsi_pi0_8.0.dec  my_utils.py  pbar_mom.C  pi0cutf.C  pid_complete.C  reco_complete.C  run0.sh  run3.sh  run6.sh  run9.sh  run_full_sim.py  run_series.py  sim_complete.C  tmp_evtgen.py  tmp_run_series.py  tut_ana.C  tut_ana_mclist.C  (+2 more)
jpsi_pi0/scripts/: ana.py  anav2.py  count_files.sh  dangerous_xx.py  evtgen.py  full_sim.py  interactive.ipynb  move.sh  my_utils.py  pid_sim.py  pid_sim.sh  pid_sim0.sh  pid_sim2.sh  remove_uniq_id.py  run_bg.py  run_bg_laptop.py  run_gen_series.py  run_sig.py  (+3 more)
pluto/: eta_dalitz.C  eta_dalitz.C_org  makefile  phi_ana  phi_ana.cpp  phi_dalitz.C
radlen/: draw.C  draw2.C  draw3.C  radlen.C  sim.sh  sim_complete_prod.C  sim_upto_emc.C  sim_upto_emc_end_with_mvd.C  sim_upto_emc_no_mvd.C  sim_upto_gem.C
src/: CMakeLists.txt
src/obsolete/RadLenData/: CMakeLists.txt
src/obsolete/ThreePion/: CMakeLists.txt  ThreePions.h
src/patch-scrut14/src/AnaTda/: CMakeLists.txt
src/patch/jan16/pgenerators/EvtGen/: CMakeLists.txt
src/patch/jan16/pgenerators/EvtGen/EvtGen/: CMakeLists.txt
src/patch/jan16/pgenerators/EvtGen/EvtGen/Private/: EvtModelReg.cpp
src/patch/jan16/pgenerators/EvtGen/EvtGenStandAlone/: PndEvtGenStandAlone.cxx
src/patch/oct14/pgenerators/EvtGen/EvtGen/: CMakeLists.txt
stuff/: BUILD_HACKS.org  EnvSetup.bkp.apr13.sh  EnvSetup.sh  FIX_TO_ROOT_BUILD_FAILURE  README  error1.txt  error2.txt  error3.txt  fortran_bug_needs_gcc46.txt  geant.txt  load_test.C  python_buffer.py
threepion/: parse_mc.C  plot.C
vandewi/: make_input_files.sh  pbarp_etaeta.in  pbarp_pi0eta.in  pbarp_pi0gamma.in  pbarp_pi0pi0.in  pbarp_pippim.in  plot.C  plot_pippim.C
(+520 files in other folders)
